[package]
name = "gitmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dirs = "5.0.1"
ron = "0.8.1"
scanf = "1.2.1"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
